# bibpay

./: .coveragerc  .env.example  .gitignore  DOCKER.md  Dockerfile  MANUAL.md  PADRAO_DJANGO_APP.md  README.md  TESTING.md  conftest.py  db.sqlite3  db2.sqlite3  docker-compose.yml  main.py  nginx.conf  pyproject.toml  teste.py  tests_comprehensive.py  tests_integration.py
.github/workflows/: ci.yml  tests.yml
apps/accounts/: tests.py  urls.py  views.py
apps/core/: models.py  services.py  tests.py
apps/core/integrations/: pagarme.py  sgpweb.py  tests.py
apps/dashboard/: tests.py  tests_views.py  urls.py  views.py
apps/notifications/: admin.py  models.py  services.py  tasks.py  templates.py
apps/notifications/domain/: messages.py  rules.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/services/: commands.py  factory.py  payment_notifications.py  templates.py  whatsapp.py
apps/orders/: admin.py  models.py  services.py  signals.py  tests.py  tests_views.py  urls.py  utils.py  views.py
apps/orders/domain/: order.py  rules.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_seller_alter_order_value.py  0003_order_total_order_value_freight.py  0004_alter_order_total_alter_order_value_and_more.py  0005_alter_order_status.py  0006_alter_order_installments_alter_order_status_and_more.py  0007_order_orders_created_77e2b9_idx_and_more.py
apps/orders/services/: commands.py  freight_calculator.py  order_query_service.py  order_service.py
apps/orders/web/: views.py
apps/payments/: admin.py  handlers .py  models.py  services.py  tests.py  tests_services.py  tests_webhook.py  urls.py  views.py
apps/payments/api/: urls.py
apps/reports/: urls.py  views.py
apps/sales/: admin.py  apps.py  forms.py  models.py  urls.py
apps/sellers/: admin.py  models.py  services.py  tests.py
config/: __init__.py  celery.py  settings.py  urls.py
static/assets/: styles.css
templates/: base.html  base_auth.html
(+56 files in other folders)
